--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>&quot;Nabu is the Babylonian god of wisdom and writing, worshipped by
 Babylonians as the son of Marduk and his consort, Sarpanitum, and as
 the grandson of Ea.&quot;</p>
-<p class="attribution">&mdash;From <a class="reference" href="http://en.wikipedia.org/wiki/Nabu">Wikipedia</a></p>
+<p class="attribution">&mdash;(From <a class="reference" href="http://en.wikipedia.org/wiki/Nabu">Wikipedia</a>)</p>
 </blockquote>
 <div class="section" id="description">
 <h1><a class="toc-backref" href="#id1" name="description">Description</a></h1>
