--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <div class="contents topic" id="contents">
 <p class="topic-title first"><a name="contents">Contents</a></p>
 <ul class="simple">
-<li><a class="reference" href="#description" id="id1" name="id1">Description</a></li>
-<li><a class="reference" href="#documentation" id="id2" name="id2">Documentation</a><ul>
-<li><a class="reference" href="#components" id="id3" name="id3">Components</a></li>
+<li><a class="reference" href="#description" id="id2" name="id2">Description</a></li>
+<li><a class="reference" href="#documentation" id="id3" name="id3">Documentation</a><ul>
+<li><a class="reference" href="#components" id="id4" name="id4">Components</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#download" id="id4" name="id4">Download</a></li>
-<li><a class="reference" href="#reporting-bugs" id="id5" name="id5">Reporting Bugs</a></li>
-<li><a class="reference" href="#installation" id="id6" name="id6">Installation</a></li>
-<li><a class="reference" href="#copyright-and-license" id="id7" name="id7">Copyright and License</a></li>
-<li><a class="reference" href="#author" id="id8" name="id8">Author</a></li>
+<li><a class="reference" href="#download" id="id5" name="id5">Download</a></li>
+<li><a class="reference" href="#reporting-bugs" id="id6" name="id6">Reporting Bugs</a></li>
+<li><a class="reference" href="#installation" id="id7" name="id7">Installation</a></li>
+<li><a class="reference" href="#copyright-and-license" id="id8" name="id8">Copyright and License</a></li>
+<li><a class="reference" href="#author" id="id9" name="id9">Author</a></li>
 </ul>
 </div>
 <!--  -->
@@ -39,7 +39,7 @@ the grandson of Ea.&quot;</p>
 <p class="attribution">&mdash;(From <a class="reference" href="http://en.wikipedia.org/wiki/Nabu">Wikipedia</a>)</p>
 </blockquote>
 <div class="section" id="description">
-<h1><a class="toc-backref" href="#id1" name="description">Description</a></h1>
+<h1><a class="toc-backref" href="#id2" name="description">Description</a></h1>
 <p>Nabu is a system for allowing users to easily create large amounts of
 relevant information and publish this information in a semantically
 meaningful way on a remote server, which can then be accessed by various
@@ -83,7 +83,7 @@ presentation layer.  You can build the presentation with any web development
 framework that can access an SQL database.</p>
 </div>
 <div class="section" id="documentation">
-<h1><a class="toc-backref" href="#id2" name="documentation">Documentation</a></h1>
+<h1><a class="toc-backref" href="#id3" name="documentation">Documentation</a></h1>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-usage.html">Usage</a>: for content creators;</li>
 <li><a class="reference" href="doc/nabu-goals.html">Goals</a>: motivation behind this project;</li>
@@ -91,7 +91,7 @@ framework that can access an SQL database.</p>
 work file);</li>
 </ul>
 <div class="section" id="components">
-<h2><a class="toc-backref" href="#id3" name="components">Components</a></h2>
+<h2><a class="toc-backref" href="#id4" name="components">Components</a></h2>
 <dl class="docutils">
 <dt>Nabu Client</dt>
 <dd>Contains a publisher that reads files on the local client filesystem and that
@@ -113,17 +113,18 @@ access to the various chunks of data.</dd>
 </div>
 </div>
 <div class="section" id="download">
-<h1><a class="toc-backref" href="#id4" name="download">Download</a></h1>
-<p>This software is not released yet, and it might never make it to the open
-source world.  We're just not sure what we're going to do with this at
-this point (2005-06-04).</p>
+<h1><a class="toc-backref" href="#id5" name="download">Download</a></h1>
+<p>You can download the <a class="reference" href="/nabu/bin/nabu">Nabu Publisher Client</a> and save it under the name
+<tt class="docutils literal"><span class="pre">nabu</span></tt>.  Usage instructions can be found <a class="reference" href="doc/nabu-usage.html">here</a>.</p>
+<p>The server code is not available for now, we only want to release this when it
+will be sexy enough.</p>
 </div>
 <div class="section" id="reporting-bugs">
-<h1><a class="toc-backref" href="#id5" name="reporting-bugs">Reporting Bugs</a></h1>
+<h1><a class="toc-backref" href="#id6" name="reporting-bugs">Reporting Bugs</a></h1>
 <p>Send email to &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;.</p>
 </div>
 <div class="section" id="installation">
-<h1><a class="toc-backref" href="#id6" name="installation">Installation</a></h1>
+<h1><a class="toc-backref" href="#id7" name="installation">Installation</a></h1>
 <ul class="simple">
 <li><em>client</em>: you need Python-2.3 (and perhaps some kind of shell environment
 (cmd.exe can do on Windows));</li>
@@ -134,7 +135,7 @@ example with a CGI script to debug the contents extracted to the database.</li>
 </ul>
 </div>
 <div class="section" id="copyright-and-license">
-<h1><a class="toc-backref" href="#id7" name="copyright-and-license">Copyright and License</a></h1>
+<h1><a class="toc-backref" href="#id8" name="copyright-and-license">Copyright and License</a></h1>
 <div class="important">
 <p class="first admonition-title">Important</p>
 <p>Copyright (C) 2005  Martin Blais.  All Rights Reserved.</p>
@@ -144,7 +145,7 @@ the rules for now.  Use by permission only.</p>
 </div>
 </div>
 <div class="section" id="author">
-<h1><a class="toc-backref" href="#id8" name="author">Author</a></h1>
+<h1><a class="toc-backref" href="#id9" name="author">Author</a></h1>
 <p>Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;</p>
 </div>
 </div>
