--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 <li><a class="reference" href="#components" id="id4" name="id4">Components</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#download" id="id5" name="id5">Download</a></li>
-<li><a class="reference" href="#reporting-bugs" id="id6" name="id6">Reporting Bugs</a></li>
-<li><a class="reference" href="#installation" id="id7" name="id7">Installation</a></li>
-<li><a class="reference" href="#copyright-and-license" id="id8" name="id8">Copyright and License</a></li>
-<li><a class="reference" href="#author" id="id9" name="id9">Author</a></li>
+<li><a class="reference" href="#download" id="id5" name="id5">Download</a><ul>
+<li><a class="reference" href="#beta-testing" id="id6" name="id6">Beta Testing</a></li>
+</ul>
+</li>
+<li><a class="reference" href="#reporting-bugs" id="id7" name="id7">Reporting Bugs</a></li>
+<li><a class="reference" href="#installation" id="id8" name="id8">Installation</a></li>
+<li><a class="reference" href="#copyright-and-license" id="id9" name="id9">Copyright and License</a></li>
+<li><a class="reference" href="#author" id="id10" name="id10">Author</a></li>
 </ul>
 </div>
 <!--  -->
@@ -118,13 +121,22 @@ access to the various chunks of data.</dd>
 <tt class="docutils literal"><span class="pre">nabu</span></tt>.  Usage instructions can be found <a class="reference" href="doc/nabu-usage.html">here</a>.</p>
 <p>The server code is not available for now, we only want to release this when it
 will be sexy enough.</p>
+<div class="section" id="beta-testing">
+<h2><a class="toc-backref" href="#id6" name="beta-testing">Beta Testing</a></h2>
+<ol class="arabic simple">
+<li><a class="reference" href="/nabu/test/cgi-bin/nabu-newuser.cgi">Create a new user in our testing Nabu server</a>;</li>
+<li>Use the created user/password to configure your client, for the publisher at
+<a class="reference" href="http://furius.ca/nabu/cgi-bin/nabu-publish-handler.cgi">http://furius.ca/nabu/cgi-bin/nabu-publish-handler.cgi</a>  ;</li>
+<li><a class="reference" href="/nabu/cgi-bin/nabu-contents.cgi">View the contents of the database (with the created user and password)</a>.</li>
+</ol>
+</div>
 </div>
 <div class="section" id="reporting-bugs">
-<h1><a class="toc-backref" href="#id6" name="reporting-bugs">Reporting Bugs</a></h1>
+<h1><a class="toc-backref" href="#id7" name="reporting-bugs">Reporting Bugs</a></h1>
 <p>Send email to &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;.</p>
 </div>
 <div class="section" id="installation">
-<h1><a class="toc-backref" href="#id7" name="installation">Installation</a></h1>
+<h1><a class="toc-backref" href="#id8" name="installation">Installation</a></h1>
 <ul class="simple">
 <li><em>client</em>: you need Python-2.3 (and perhaps some kind of shell environment
 (cmd.exe can do on Windows));</li>
@@ -135,7 +147,7 @@ example with a CGI script to debug the contents extracted to the database.</li>
 </ul>
 </div>
 <div class="section" id="copyright-and-license">
-<h1><a class="toc-backref" href="#id8" name="copyright-and-license">Copyright and License</a></h1>
+<h1><a class="toc-backref" href="#id9" name="copyright-and-license">Copyright and License</a></h1>
 <div class="important">
 <p class="first admonition-title">Important</p>
 <p>Copyright (C) 2005  Martin Blais.  All Rights Reserved.</p>
@@ -145,7 +157,7 @@ the rules for now.  Use by permission only.</p>
 </div>
 </div>
 <div class="section" id="author">
-<h1><a class="toc-backref" href="#id9" name="author">Author</a></h1>
+<h1><a class="toc-backref" href="#id10" name="author">Author</a></h1>
 <p>Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;</p>
 </div>
 </div>
