--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ framework that can access an SQL database.</p>
 <li><a class="reference" href="doc/nabu-goals.html">Goals</a>: motivation behind this project;</li>
 <li><a class="reference" href="doc/nabu-ideas.html">Ideas</a>: unorganized file with random ideas (this is my
 work file);</li>
+<li><a class="reference" href="doc/nabu-design.html">Design</a>: design concepts.</li>
 </ul>
 <div class="section" id="components">
 <h2><a class="toc-backref" href="#id4" name="components">Components</a></h2>
