--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ the grandson of Ea.&quot;</p>
 </ul>
 </li>
 <li><a class="reference" href="#features" id="id10" name="id10">Features</a><ul>
-<li><a class="reference" href="#nabu-is-not" id="id11" name="id11">Nabu is not</a></li>
+<li><a class="reference" href="#nabu-is-not" id="id11" name="id11">Nabu is not ...</a></li>
 </ul>
 </li>
 <li><a class="reference" href="#documentation" id="id12" name="id12">Documentation</a><ul>
@@ -203,7 +203,7 @@ The client only requires Python to work;</p>
 </li>
 </ul>
 <div class="section" id="nabu-is-not">
-<h2><a class="toc-backref" href="#id11" name="nabu-is-not">Nabu is not</a></h2>
+<h2><a class="toc-backref" href="#id11" name="nabu-is-not">Nabu is not ...</a></h2>
 <ul class="simple">
 <li>a Wiki: although we upload documents (like Wiki pages) to a server, it may be
 that the presentation layer never serves the pages/documents themselves.
