--- a/index.html
+++ b/index.html
@@ -263,9 +263,12 @@ that I would like to do that is not on the immediate list;</li>
 <h1><a class="toc-backref" href="#id16" name="download">Download</a></h1>
 <p>You can download the <a class="reference" href="/nabu/bin/nabu">Nabu Publisher Client</a> and save it under the name
 <tt class="docutils literal"><span class="pre">nabu</span></tt>.  Usage instructions can be found <a class="reference" href="doc/nabu-usage.html">here</a>.</p>
-<p>The entire codebase is available from our Subversion server only, until we
-release a 1.0 version.  It consists mostly in server code, but it also contains
-the publisher client.</p>
+<p>Snapshots of the latest Nabu source code can be found in the <a class="reference" href="/downloads/nabu">Download Area</a>.  It consists mostly in server code, but it also contains
+the publisher client.  When I get some feedback I will decide on the version
+number.</p>
+<p>Stability is a relative matter.  Personally, I consider these snapshots to
+correspond to a beta stability for a 1.0 release.  When I get some feedback I
+will select version number (probably 1.0).</p>
 </div>
 <div class="section" id="reporting-bugs">
 <h1><a class="toc-backref" href="#id17" name="reporting-bugs">Reporting Bugs</a></h1>
@@ -317,7 +320,7 @@ database.</p>
 </div>
 <div class="section" id="copyright-and-license">
 <h1><a class="toc-backref" href="#id19" name="copyright-and-license">Copyright and License</a></h1>
-<p>Copyright (C) 2005  Martin Blais.  
+<p>Copyright (C) 2005  Martin Blais.
 This code is distributed under the <a class="reference" href="COPYING">GNU General Public License</a>.</p>
 </div>
 <div class="section" id="author">
