--- a/index.html
+++ b/index.html
@@ -266,6 +266,12 @@ that I would like to do that is not on the immediate list;</li>
 <p>Snapshots of the latest Nabu source code can be found in the <a class="reference" href="/downloads/nabu">Download Area</a>.  It consists mostly in server code, but it also contains
 the publisher client.  When I get some feedback I will decide on the version
 number.</p>
+<div class="important">
+<p class="first admonition-title">Important</p>
+<p class="last">You will need a recent snapshot of the docutils svn development
+tree (after stamp 3624) to be able to install and run a server.
+This does not affect clients.</p>
+</div>
 <p>Stability is a relative matter.  Personally, I consider these snapshots to
 correspond to a beta stability for a 1.0 release.  When I get some feedback I
 will select version number (probably 1.0).</p>
