--- a/index.html
+++ b/index.html
@@ -334,12 +334,13 @@ This code is distributed under the <a class="reference" href="COPYING">GNU Gener
 <h1><a class="toc-backref" href="#id22" name="acknowledgements">Acknowledgements</a></h1>
 <p>This project uses two important libraries to do its thing:</p>
 <ul class="simple">
-<li>the <a class="reference" href="http://docutils.sourceforge.net">docutils</a> project, which provides an
-RST parser, the internal document structure, and the HTML writer (and more).
-Docutils is a major facilitator for this system--without it this idea probably
-would not have see the light of daya;</li>
-<li>the <a class="reference" href="http://sqlobject.org">SQLObject</a> library, which provides easier access
-to SQL storage.</li>
+<li>the <a class="reference" href="http://docutils.sourceforge.net">Docutils</a> project (written mostly by
+Dave Goodger), which provides a reStructuredText parser, the internal document
+structure, and the HTML writer (and more).  Docutils is a major facilitator
+for this system--without it this idea probably would not have see the light of
+day;</li>
+<li>the <a class="reference" href="http://sqlobject.org">SQLObject</a> library (written by Ian Bicking),
+which provides easier access to SQL storage.</li>
 </ul>
 <p>It is also built in the Python language.</p>
 </div>
