--- a/index.html
+++ b/index.html
@@ -195,11 +195,12 @@ your documents while keeping the possibility of a permanent link to them.</p>
 organize and present the content is dictated by ways that <em>you</em> decide, most
 likely independent of the source file organization structure;</p>
 </li>
-<li><p class="first">the input data is scattered over many files, it does not have to be stored
-per-category (for example, you don't have to store all your &quot;contacts&quot; in a
-single &quot;address book&quot; file).  I conjecture that this may be closer to how
-humans think of this data.  This body of files can be used to create a
-mind-mapping system;</p>
+<li><p class="first">the input data can be scattered over many files, it does not have to be stored
+in files per-category (for example, you don't have to store all your
+&quot;contacts&quot; in a single &quot;address book&quot; file, they can be found within/across
+all your body of published file and a server might present as a single list if
+desired).  I conjecture that this may be closer to how humans think of this
+data.  This body of files can be used to create a mind-mapping system;</p>
 </li>
 <li><p class="first">we recognize that the value of the information lies in the source itself, the
 text files.  This valuable source remains <em>with you</em>, and you are free to
