--- a/index.html
+++ b/index.html
@@ -220,27 +220,32 @@ The client only requires Python to work;</p>
 </ul>
 <div class="section" id="nabu-is-not">
 <h2><a class="toc-backref" href="#id13" name="nabu-is-not">Nabu is not ...</a></h2>
-<ul>
-<li><p class="first">not a Wiki: although we upload documents (like Wiki pages) to a server, it may
+<dl class="docutils">
+<dt>A Wiki</dt>
+<dd>Although we upload documents (like Wiki pages) to a server, it may
 be that the presentation layer never serves the pages/documents themselves.
 Maybe it just serves bits of information extracted from the files.  Also,
 documents are identified by a unique string, and not by Wiki names.  This
 allows one to use whatever title for single documents and to create permanent
-links to specific documents (as long as the file ID is maintained);</p>
-</li>
-<li><p class="first">not a Blogging system: it can be used to add any document set to a database.
+links to specific documents (as long as the file ID is maintained);</dd>
+<dt>A Blogging system</dt>
+<dd><p class="first">It can be used to add any document set to a database.
 Organization by date and category is simply implemented, but not a
 requirement.  You present the data set (which can be anything) in your
-preferred manner;</p>
-</li>
-<li><p class="first">not a Word Processing system: it is not meant to just serve documents.  You
+preferred manner.</p>
+<p class="last">You could, however, very easily implement a flexible and very complete
+blogging system using Nabu.</p>
+</dd>
+<dt>Word Processing system</dt>
+<dd><p class="first">It is not meant to just serve documents.  You
 can use it to publish just the information that is found within documents,
 used to contain that information.</p>
-<p>Also, you write your documents locally, but they have the limitations of
+<p class="last">Also, you write your documents locally, but they have the limitations of
 <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a>, so it is not really like a Word processing system.  You
 must use a simple text editor.</p>
-</li>
-<li><p class="first">not a generic data entry format: although you could potentially use it to
+</dd>
+<dt>A generic data entry format</dt>
+<dd><p class="first">Although you could potentially use it to
 enter larges lists of similarly structured data, the overhead of document
 processing does not make it the most efficient way to do this.  If you have
 <em>lots</em> of similarly structured bits of human-editable data, it would probably
@@ -248,11 +253,11 @@ be better to write custom code to parse a known format rather than leverage
 Nabu for this.  The <a class="reference" href="http://docutils.sourceforge.net">docutils</a> processing on the server is not extremely fast,
 and if you need speed for lots of data (say, thousands of files), you will
 probably find this too slow.</p>
-<p>However, for smaller sets of files, Nabu could be used this way.  Or if you
+<p class="last">However, for smaller sets of files, Nabu could be used this way.  Or if you
 have to input various kinds of structures within different contexts which can
 be grouped in files.</p>
-</li>
-</ul>
+</dd>
+</dl>
 <p>Nabu sits between all these things.  I do not know what to call it, so I just
 call it &quot;Nabu&quot;.</p>
 </div>
