--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@ The client only requires Python to work;</p>
 <div class="section" id="nabu-is-not">
 <h2><a class="toc-backref" href="#id13" name="nabu-is-not">Nabu is not ...</a></h2>
 <dl class="docutils">
-<dt>A Wiki</dt>
+<dt>Not a Wiki</dt>
 <dd>Although we upload documents (like Wiki pages) to a server, it may
 be that the presentation layer never serves the pages/documents themselves.
 Maybe it just serves bits of information extracted from the files.  Also,
 documents are identified by a unique string, and not by Wiki names.  This
 allows one to use whatever title for single documents and to create permanent
 links to specific documents (as long as the file ID is maintained);</dd>
-<dt>A Blogging system</dt>
+<dt>Not just a Blogging system</dt>
 <dd><p class="first">It can be used to add any document set to a database.
 Organization by date and category is simply implemented, but not a
 requirement.  You present the data set (which can be anything) in your
@@ -236,7 +236,7 @@ preferred manner.</p>
 <p class="last">You could, however, very easily implement a flexible and very complete
 blogging system using Nabu.</p>
 </dd>
-<dt>Word Processing system</dt>
+<dt>Not a Word Processing system</dt>
 <dd><p class="first">It is not meant to just serve documents.  You
 can use it to publish just the information that is found within documents,
 used to contain that information.</p>
@@ -244,7 +244,7 @@ used to contain that information.</p>
 <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a>, so it is not really like a Word processing system.  You
 must use a simple text editor.</p>
 </dd>
-<dt>A generic data entry format</dt>
+<dt>Not a generic data entry format</dt>
 <dd><p class="first">Although you could potentially use it to
 enter larges lists of similarly structured data, the overhead of document
 processing does not make it the most efficient way to do this.  If you have
