--- a/index.html
+++ b/index.html
@@ -305,8 +305,9 @@ tree (after stamp 3624) to be able to install and run a server.
 This does not affect clients.</p>
 </div>
 <p>Stability is a relative matter.  Personally, I consider these snapshots to
-correspond to a beta stability for a 1.0 release.  When I get some feedback I
-will select version number (probably 1.0).</p>
+correspond to a beta stability for a 1.0 release.  I'm already using the system
+on personal projects (works for me), and I'm committed to fix bugs reported by
+others.  When I get some feedback I will select version number (probably 1.0).</p>
 </div>
 <div class="section" id="reporting-bugs">
 <h1><a class="toc-backref" href="#id19" name="reporting-bugs">Reporting Bugs</a></h1>
