--- a/index.html
+++ b/index.html
@@ -50,17 +50,18 @@ the grandson of Ea.&quot;</p>
 </ul>
 </li>
 <li><a class="reference" href="#documentation" id="id14" name="id14">Documentation</a><ul>
-<li><a class="reference" href="#technical" id="id15" name="id15">Technical</a></li>
-<li><a class="reference" href="#design" id="id16" name="id16">Design</a></li>
-<li><a class="reference" href="#test-drive-nabu" id="id17" name="id17">Test Drive Nabu</a></li>
+<li><a class="reference" href="#for-content-writers" id="id15" name="id15">For Content Writers</a></li>
+<li><a class="reference" href="#technical" id="id16" name="id16">Technical</a></li>
+<li><a class="reference" href="#design" id="id17" name="id17">Design</a></li>
+<li><a class="reference" href="#test-drive-nabu" id="id18" name="id18">Test Drive Nabu</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#download" id="id18" name="id18">Download</a></li>
-<li><a class="reference" href="#reporting-bugs" id="id19" name="id19">Reporting Bugs</a></li>
-<li><a class="reference" href="#installation-and-dependencies" id="id20" name="id20">Installation and Dependencies</a></li>
-<li><a class="reference" href="#copyright-and-license" id="id21" name="id21">Copyright and License</a></li>
-<li><a class="reference" href="#acknowledgements" id="id22" name="id22">Acknowledgements</a></li>
-<li><a class="reference" href="#author" id="id23" name="id23">Author</a></li>
+<li><a class="reference" href="#download" id="id19" name="id19">Download</a></li>
+<li><a class="reference" href="#reporting-bugs" id="id20" name="id20">Reporting Bugs</a></li>
+<li><a class="reference" href="#installation-and-dependencies" id="id21" name="id21">Installation and Dependencies</a></li>
+<li><a class="reference" href="#copyright-and-license" id="id22" name="id22">Copyright and License</a></li>
+<li><a class="reference" href="#acknowledgements" id="id23" name="id23">Acknowledgements</a></li>
+<li><a class="reference" href="#author" id="id24" name="id24">Author</a></li>
 </ul>
 </div>
 <div class="section" id="description">
@@ -264,10 +265,15 @@ call it &quot;Nabu&quot;.</p>
 </div>
 <div class="section" id="documentation">
 <h1><a class="toc-backref" href="#id14" name="documentation">Documentation</a></h1>
-<div class="section" id="technical">
-<h2><a class="toc-backref" href="#id15" name="technical">Technical</a></h2>
+<div class="section" id="for-content-writers">
+<h2><a class="toc-backref" href="#id15" name="for-content-writers">For Content Writers</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-usage.html">Usage</a>: usage instructions for content pushers;</li>
+</ul>
+</div>
+<div class="section" id="technical">
+<h2><a class="toc-backref" href="#id16" name="technical">Technical</a></h2>
+<ul class="simple">
 <li><a class="reference" href="doc/nabu-server.html">Server Setup</a>: instructions for installing and
 configuring a Nabu server;</li>
 <li><a class="reference" href="TODO">TODO list</a>: list of future changes, broken things, etc.;</li>
@@ -275,7 +281,7 @@ configuring a Nabu server;</li>
 </ul>
 </div>
 <div class="section" id="design">
-<h2><a class="toc-backref" href="#id16" name="design">Design</a></h2>
+<h2><a class="toc-backref" href="#id17" name="design">Design</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-goals.html">Goals</a>: motivation behind this project, history of
 what led me to implement this;</li>
@@ -285,14 +291,14 @@ that I would like to do that is not on the immediate list;</li>
 </ul>
 </div>
 <div class="section" id="test-drive-nabu">
-<h2><a class="toc-backref" href="#id17" name="test-drive-nabu">Test Drive Nabu</a></h2>
+<h2><a class="toc-backref" href="#id18" name="test-drive-nabu">Test Drive Nabu</a></h2>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-beta.html">Test Drive</a>: test drive Nabu on our server;</li>
 </ul>
 </div>
 </div>
 <div class="section" id="download">
-<h1><a class="toc-backref" href="#id18" name="download">Download</a></h1>
+<h1><a class="toc-backref" href="#id19" name="download">Download</a></h1>
 <p>You can download the <a class="reference" href="/nabu/bin/nabu">Nabu Publisher Client</a> and save it under the name
 <tt class="docutils literal"><span class="pre">nabu</span></tt>.  Usage instructions can be found <a class="reference" href="doc/nabu-usage.html">here</a>.</p>
 <p>Snapshots of the latest Nabu source code can be found in the <a class="reference" href="/downloads/nabu">Download Area</a>.  It consists mostly of server code, but it also contains
@@ -310,11 +316,11 @@ on personal projects (works for me), and I'm committed to fix bugs reported by
 others.  When I get some feedback I will select version number (probably 1.0).</p>
 </div>
 <div class="section" id="reporting-bugs">
-<h1><a class="toc-backref" href="#id19" name="reporting-bugs">Reporting Bugs</a></h1>
+<h1><a class="toc-backref" href="#id20" name="reporting-bugs">Reporting Bugs</a></h1>
 <p>Send email to the author: Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;.</p>
 </div>
 <div class="section" id="installation-and-dependencies">
-<h1><a class="toc-backref" href="#id20" name="installation-and-dependencies">Installation and Dependencies</a></h1>
+<h1><a class="toc-backref" href="#id21" name="installation-and-dependencies">Installation and Dependencies</a></h1>
 <dl class="docutils">
 <dt>Nabu Publisher Client</dt>
 <dd><p class="first">A single file written in Python.</p>
@@ -355,26 +361,26 @@ database.</p>
 </dl>
 </div>
 <div class="section" id="copyright-and-license">
-<h1><a class="toc-backref" href="#id21" name="copyright-and-license">Copyright and License</a></h1>
+<h1><a class="toc-backref" href="#id22" name="copyright-and-license">Copyright and License</a></h1>
 <p>Copyright (C) 2005  Martin Blais.
 This code is distributed under the <a class="reference" href="COPYING">GNU General Public License</a>.</p>
 </div>
 <div class="section" id="acknowledgements">
-<h1><a class="toc-backref" href="#id22" name="acknowledgements">Acknowledgements</a></h1>
+<h1><a class="toc-backref" href="#id23" name="acknowledgements">Acknowledgements</a></h1>
 <p>This project uses two important libraries to do its thing:</p>
 <ul class="simple">
 <li>the <a class="reference" href="http://docutils.sourceforge.net">Docutils</a> project (written mostly by
-Dave Goodger), which provides a reStructuredText parser, the internal document
-structure, and the HTML writer (and more).  Docutils is a major facilitator
-for this system--without it this idea probably would not have seen the light of
-day;</li>
+Dave Goodger), which provides the reStructuredText parser, the internal
+document structure, and the HTML writer (and more).  Docutils is a major
+facilitator for this system--without it this idea probably would not have seen
+the light of day;</li>
 <li>the <a class="reference" href="http://sqlobject.org">SQLObject</a> library (written by Ian Bicking),
 which provides easier access to SQL storage.</li>
 </ul>
 <p>It is also built in the Python language.</p>
 </div>
 <div class="section" id="author">
-<h1><a class="toc-backref" href="#id23" name="author">Author</a></h1>
+<h1><a class="toc-backref" href="#id24" name="author">Author</a></h1>
 <p>Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;</p>
 </div>
 </div>
