--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@ perhaps password-protected for access by certain people only, or filtered
 somehow.</p>
 <p>There are many possibilities... I'm convinced I will find more serious uses for
 this system as well, which is why I built it in a generic manner.</p>
+<div class="important">
+<p class="first admonition-title">Important</p>
+<p class="last">If you have a commercial use need for a system similar to this one, the
+author is generally available for consulting to implement customizations or
+build a system on top of Nabu.  See <a class="reference" href="/home/consulting.html">contact information for consulting</a>.  I'm very interested in new ways to publish and
+organize information online.</p>
+</div>
 </div>
 <div class="section" id="customizability-writing-extractors">
 <h2><a class="toc-backref" href="#id10" name="customizability-writing-extractors">Customizability: Writing Extractors</a></h2>
