--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ present the extracted data in the way that you prefer.</p>
 <img alt="doc/nabusit.png" src="doc/nabusit.png" />
 <p class="caption">Nabu does not really fit into any single category... it is a simple
 implementation of a simple idea that &quot;sits&quot; between all these things and that
-can be used to feed data into similar presentation layers.</p>
+can be used to feed data into databases for presentations similar as the ones
+mentioned above.</p>
 </div>
 <p>It is probably best illustrated by some examples...</p>
 <div class="section" id="example-extracting-contact-info">
