--- a/index.html
+++ b/index.html
@@ -288,6 +288,12 @@ call it &quot;Nabu&quot;.</p>
 <ul class="simple">
 <li><a class="reference" href="doc/nabu-server.html">Server Setup</a>: instructions for installing and
 configuring a Nabu server;</li>
+<li><a class="reference" href="doc/nabu-extractor.html">Writing an Extractor</a>: an example extractor source
+code, with details and commentary.  Since you are expected to provide or at
+least configure your own extractors for your application, this will be useful
+if you intend to put Nabu to good use.  This could also help you understand
+more precisely the nature of what Nabu actually provides and what it does not
+provide;</li>
 <li><a class="reference" href="TODO">TODO list</a>: list of future changes, broken things, etc.;</li>
 <li><a class="reference" href="CHANGES">Change Log</a>: recent changes, history;</li>
 </ul>
@@ -396,6 +402,8 @@ which provides easier access to SQL storage.</li>
 <div class="section" id="author">
 <h1><a class="toc-backref" href="#id24" name="author">Author</a></h1>
 <p>Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;</p>
+<!-- "Text files are forever" -->
+<!-- - -Martin -->
 </div>
 </div>
 </body>
