--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@ used to push the files to the server for processing and storage (think
 left unspecified: you can use whichever web application framework you like to
 present the extracted data in the way that you prefer.</p>
 <div class="figure">
-<img alt="doc/nabusit.png" src="doc/nabusit.png" />
-<p class="caption">Nabu does not really fit into any single category... it is a simple
-implementation of a simple idea that &quot;sits&quot; between all these things and that
-can be used to feed data into databases for presentations similar as the ones
-mentioned above.</p>
+<img alt="doc/nabu2.png" src="doc/nabu2.png" />
+<p class="caption">Dataflow diagram of Nabu framework.</p>
 </div>
 <p>It is probably best illustrated by some examples...</p>
 <div class="section" id="example-extracting-contact-info">
@@ -109,6 +106,13 @@ Ahh, I like to talk about cookies and cream...
 </pre>
 <p>All you would have to do is present the documents in an orderly way, e.g. by
 category, by date, just the most recent, whatever you like.</p>
+<div class="figure">
+<img alt="doc/nabusit.png" src="doc/nabusit.png" />
+<p class="caption">Nabu does not really fit into any single category... it is a simple
+implementation of a simple idea that &quot;sits&quot; between all these things and that
+can be used to feed data into databases for presentations similar as the ones
+mentioned above.</p>
+</div>
 </div>
 <div class="section" id="example-automatic-bookmarks-list">
 <h2><a class="toc-backref" href="#id8" name="example-automatic-bookmarks-list">Example: Automatic Bookmarks List</a></h2>
