--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@ the grandson of Ea.&quot;</p>
 </li>
 <li><a class="reference" href="#download" id="id19" name="id19">Download</a></li>
 <li><a class="reference" href="#reporting-bugs" id="id20" name="id20">Reporting Bugs</a></li>
-<li><a class="reference" href="#installation-and-dependencies" id="id21" name="id21">Installation and Dependencies</a></li>
-<li><a class="reference" href="#copyright-and-license" id="id22" name="id22">Copyright and License</a></li>
-<li><a class="reference" href="#acknowledgements" id="id23" name="id23">Acknowledgements</a></li>
-<li><a class="reference" href="#author" id="id24" name="id24">Author</a></li>
+<li><a class="reference" href="#links" id="id21" name="id21">Links</a></li>
+<li><a class="reference" href="#installation-and-dependencies" id="id22" name="id22">Installation and Dependencies</a></li>
+<li><a class="reference" href="#copyright-and-license" id="id23" name="id23">Copyright and License</a></li>
+<li><a class="reference" href="#acknowledgements" id="id24" name="id24">Acknowledgements</a></li>
+<li><a class="reference" href="#author" id="id25" name="id25">Author</a></li>
 </ul>
 </div>
 <div class="section" id="description">
@@ -341,8 +342,16 @@ others.  When I get some feedback I will select version number (probably 1.0).</
 <h1><a class="toc-backref" href="#id20" name="reporting-bugs">Reporting Bugs</a></h1>
 <p>Send email to the author: Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;.</p>
 </div>
+<div class="section" id="links">
+<h1><a class="toc-backref" href="#id21" name="links">Links</a></h1>
+<p>Some links to projects with similar goals, or that have some kind of conceptual
+relation:</p>
+<ul class="simple">
+<li><a class="reference" href="http://www.devon-technologies.com/products/devonthink/">DEVONthink</a></li>
+</ul>
+</div>
 <div class="section" id="installation-and-dependencies">
-<h1><a class="toc-backref" href="#id21" name="installation-and-dependencies">Installation and Dependencies</a></h1>
+<h1><a class="toc-backref" href="#id22" name="installation-and-dependencies">Installation and Dependencies</a></h1>
 <dl class="docutils">
 <dt>Nabu Publisher Client</dt>
 <dd><p class="first">A single file written in Python.</p>
@@ -385,12 +394,12 @@ database.</p>
 </dl>
 </div>
 <div class="section" id="copyright-and-license">
-<h1><a class="toc-backref" href="#id22" name="copyright-and-license">Copyright and License</a></h1>
+<h1><a class="toc-backref" href="#id23" name="copyright-and-license">Copyright and License</a></h1>
 <p>Copyright (C) 2005  Martin Blais.
 This code is distributed under the <a class="reference" href="COPYING">GNU General Public License</a>.</p>
 </div>
 <div class="section" id="acknowledgements">
-<h1><a class="toc-backref" href="#id23" name="acknowledgements">Acknowledgements</a></h1>
+<h1><a class="toc-backref" href="#id24" name="acknowledgements">Acknowledgements</a></h1>
 <p>This project uses two important libraries to do its thing:</p>
 <ul class="simple">
 <li>the <a class="reference" href="http://docutils.sourceforge.net">Docutils</a> project (written mostly by
@@ -404,7 +413,7 @@ which provides easier access to SQL storage.</li>
 <p>It is also built in the Python language.</p>
 </div>
 <div class="section" id="author">
-<h1><a class="toc-backref" href="#id24" name="author">Author</a></h1>
+<h1><a class="toc-backref" href="#id25" name="author">Author</a></h1>
 <p>Martin Blais &lt;<a class="reference" href="mailto:blais&#64;furius.ca">blais&#64;furius.ca</a>&gt;</p>
 <!-- "Text files are forever" -->
 <!-- - -Martin -->
